# marionette

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  flake.nix  test_mcp.sh
src/: lib.rs  main.rs  server.rs
src/backend/: kwin.rs  mod.rs  x11.rs
src/core/: mod.rs  registry.rs
src/input/: mod.rs
src/screenshot/: mod.rs
