[package]
name = "marionette"
version = "0.1.0"
edition = "2024"
description = "Window manipulation MCP server for Linux"
license = "MIT"

[dependencies]
# MCP Framework
rmcp = { version = "0.12", features = ["server", "transport-io"] }
schemars = "0.8"

# Async runtime
tokio = { version = "1", features = ["full", "process"] }
async-trait = "0.1"

# X11
x11rb = { version = "0.13", features = ["all-extensions"] }

# Screenshots
xcap = "0.8"
image = "0.25"
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
